--- a/GoDeliverFrontEnd/src/app/footer/footer.component.html
+++ b/GoDeliverFrontEnd/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
+  <!-- Footer Page-->
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
@@ -6,7 +7,7 @@
 </head>
 
 <body>
-  <!-- Footer -->
+
   <footer class="page-footer font-small footer-dark cyan darken-5 bg-dark text-light foot">
 
 
