--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -1,4 +1,13 @@
 <!-- Header -->
+<html>
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
 <header>
   <nav class="navbar navbar-expand-sm bg-dark  navbar-dark">
 
@@ -17,7 +26,7 @@
       <div *ngIf=curuser style="padding-top: 10px;">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-            {{curuser[0]}}
+            {{ curuser[0] }}
           </a>
 
           <div class="dropdown-menu ">
@@ -46,3 +55,5 @@
     </ul>
   </nav>
 </header>
+</body>
+</html>
