--- a/GoDeliverFrontEnd/src/app/home/home.component.html
+++ b/GoDeliverFrontEnd/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-    <div class="col-sm-10 mb-4" style="padding-left:200px">
+    <div class="col-sm-8 mb-4 center-block">
         <form>
             <div class="row">
                 <div class="col-9">
-                    <input type="text" class="form-control text-center" placeholder="Search your favourite books here" name="search" [(ngModel)]="search">
+                    <input type="text" class="form-control" placeholder="Search your favourite books here" name="search" [(ngModel)]="search">
                 </div>
                 <div class="col-3">
                     <button class="btn-block btn-info form-control" (click)="searchBooks()">Search</button>
