--- a/GoDeliverFrontEnd/src/app/cart/cart.component.html
+++ b/GoDeliverFrontEnd/src/app/cart/cart.component.html
@@ -1,4 +1,10 @@
-<p>
-  cart works!
-</p>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<div class="container">
+  <h2>Cart Items</h2>
+<ul *ngFor="let item of carts" class="collection">
+   {{item.title}}
+  <img src="{{item.poster}}" height="150px" width="150px"/>
+  <li>Rs {{item.cost}}
+  <li>{{item.genre}}</li>
+</ul>
+
+</div>
