--- a/GoDeliverFrontEnd/src/app/login/login.component.css
+++ b/GoDeliverFrontEnd/src/app/login/login.component.css
@@ -1,4 +1,4 @@
-*,
+/* *,
 *:before,
 *:after {
   box-sizing: border-box;
@@ -15,6 +15,7 @@ h4 {
 header {
   margin-bottom: 30px;
 }
+
 input,
 input[type="radio"] + label,
 input[type="checkbox"] + label:before,
@@ -225,4 +226,44 @@ label {
 }
 [type="date"]::-webkit-calendar-picker-indicator {
   opacity: 0;
+}
+
+/* 
+.example-form {
+  min-width: 150px;
+  max-width: 200px;
+  width: 50%;
+  padding-top:10px;
+ margin-left:560px;
+}
+
+.example-full-width {
+  width: 100%;
+}
+.email{
+  margin-top:20px;
+} */
+
+background {
+  background: url("../../assets/home.jpeg") no-repeat;
+}
+
+.example-form {
+  position: relative;
+  min-width: 100px;
+  max-width: 200px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.loginButton {
+  position: relative;
+  left: 20%;
+}
+
+.register {
+  position: relative;
+  top: 2%;
+  left: -10%;
 }
