--- a/GoDeliverFrontEnd/src/app/login/login.component.html
+++ b/GoDeliverFrontEnd/src/app/login/login.component.html
@@ -1,5 +1,5 @@
-
-<div class="container">
+<!-- 
+<div class="container img-responsive">
   <div class="row ">
     <form class="form-horizontal" [formGroup]="userForm" (ngSubmit)="loginSubmit()">
       <div class="form-group">
@@ -14,7 +14,7 @@
       </div>
 
       <!--form-group-->
-      <div class="form-group">
+<!-- <div class="form-group">
         <label for="userPassword">Password</label>
         <input type="password" class="form-control" formControlName="userPassword" name="userPassword" required minlength="8" />
         <div *ngIf="userPassword.dirty && userPassword.errors" class="error">
@@ -24,8 +24,8 @@
         </div>
       </div>
       <!--form-group-->
-      <!--form-group-->
-      <div class="form-group">
+<!--form-group-->
+<!-- <div class="form-group">
         <button class="btn btn-primary">Login</button>
         <div *ngIf="error" class="alert alert-danger">{{error}}</div>
       </div>
@@ -41,4 +41,45 @@
 <br>
 <br>
 
-<br><br><br><br><br><Br>
+<br><br><br><br><br><Br> -->
+
+<body>
+  <div class="background">
+    <div class="row mb-4 ml-1">
+      <div class="col-sm-7">
+        <img class="img-responsive" src="assets/home.jpeg" style="width:800px;height:520px;">
+      </div>
+      <div class="col-sm-5">
+        <form class="example-form " [formGroup]="userForm" (ngSubmit)="loginSubmit()" style="height:70%">
+          <mat-form-field class="example-full-width">
+            <input matInput type="text" placeholder="Email" formControlName="userEmail" name="userEmail" required [pattern]="emailPattern">
+            <div *ngIf="userEmail.dirty && userEmail.errors" class="error">
+              <div *ngIf="userEmail.errors.required" class="validation_message">
+                User Email required.
+              </div>
+            </div>
+            <mat-hint>eg:abc@gmail.com</mat-hint>
+          </mat-form-field>
+
+          <mat-form-field class="example-full-width" style="margin-top:18px">
+            <input matInput type="password" placeholder="password" formControlName="userPassword" name="userPassword" required minlength="8">
+
+            <div *ngIf="userPassword.dirty && userPassword.errors" class="error">
+              <div *ngIf="userPassword.errors.required" class="validation_message">
+                Password required.
+              </div>
+            </div>
+          </mat-form-field>
+
+          <button class="loginButton" mat-raised-button style="color:green">Login</button>
+          <!-- <a id="signUp" routerLink="/register"><br>New to GoDeliver? Sign up</a> -->
+          <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+          <button class="register" [routerLink]="['/register']" mat-raised-button style="color:green">New to GoDeliver? Sign
+            Up!
+          </button>
+        </form>
+
+      </div>
+    </div>
+  </div>
+</body>
