--- a/GoDeliverFrontEnd/src/app/registration/registration.component.html
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 
 <head>
   <style>
@@ -13,62 +13,99 @@
 <body>
 
   <!--container-->
-  <div class="container">
-    <div class="row">
-      <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
-        <div class="form-group">
-          <label for="Name">Name</label>
-          <input type="text" class="form-control" [(ngModel)]="model.Name" #Name="ngModel" [ngClass]="{'is-invalid':f.submitted && Name.invalid}"
-            name="Name" placeholder="Full Name" required />
-          <div class="invalid-feedback">
-            <div>Name is required</div>
-          </div>
+<!-- <div class="container">
+  <div class="row">
+    <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+      <div class="form-group">
+        <label for="Name">Name</label>
+        <input type="text" class="form-control" [(ngModel)]="model.Name" #Name="ngModel" [ngClass]="{'is-invalid':f.submitted && Name.invalid}"
+          name="Name" placeholder="Full Name" required />
+        <div class="invalid-feedback">
+          <div>Name is required</div>
         </div>
-        <div class="form-group">
-          <label for="DOB">Date Of Birth</label>
-          <input type="date" class="form-control" [(ngModel)]="model.Date" placeholder="yyyy-MM-dd" min="1970-01-01" max="2018-08-20"
-            #Date="ngModel" [ngClass]="{'is-invalid':f.submitted && Date.invalid}" name="Date" required />
-          <div class="invalid-feedback">
-            <div>DOB is required</div>
-          </div>
+      </div>
+      <div class="form-group">
+        <label for="DOB">Date Of Birth</label>
+        <input type="date" class="form-control" [(ngModel)]="model.Date" placeholder="yyyy-MM-dd" min="1970-01-01" max="2018-08-20"
+          #Date="ngModel" [ngClass]="{'is-invalid':f.submitted && Date.invalid}" name="Date" required />
+        <div class="invalid-feedback">
+          <div>DOB is required</div>
         </div>
+      </div>
 
-        <!--form-group-->
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="text" class="form-control" [(ngModel)]="model.email" #email="ngModel" [ngClass]="{'is-invalid':f.submitted && email.invalid}"
-            placeholder="john@gmail.com" name="email" required [pattern]="emailPattern" email />
-          <div *ngIf="f.submitted && email.invalid" class="invalid-feedback">
-            <div *ngIf="email.errors.required">Email Name is required</div>
-            <div *ngIf="email.errors.email">Email must be a valid email Address</div>
-          </div>
+      <!--form-group-->
+<!-- <div class="form-group">
+        <label for="email">Email</label>
+        <input type="text" class="form-control" [(ngModel)]="model.email" #email="ngModel" [ngClass]="{'is-invalid':f.submitted && email.invalid}"
+          placeholder="john@gmail.com" name="email" required [pattern]="emailPattern" email />
+        <div *ngIf="f.submitted && email.invalid" class="invalid-feedback">
+          <div *ngIf="email.errors.required">Email Name is required</div>
+          <div *ngIf="email.errors.email">Email must be a valid email Address</div>
         </div>
-        <!--form-group-->
+      </div> -->
 
-        <!--form-group-->
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" placeholder="password" [(ngModel)]="model.password" #password="ngModel" [ngClass]="{'is-invalid':f.submitted && password.invalid}"
-            name="password" required minlength="6" />
-          <div *ngIf="f.submitted && password.invalid" class="invalid-feedback">
-            <div *ngIf="password.errors.required">Password Name is required</div>
-            <div *ngIf="password.errors.minlength">Password must be at least 6 characters</div>
-          </div>
+<!-- <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" placeholder="password" [(ngModel)]="model.password" #password="ngModel" [ngClass]="{'is-invalid':f.submitted && password.invalid}"
+          name="password" required minlength="6" />
+        <div *ngIf="f.submitted && password.invalid" class="invalid-feedback">
+          <div *ngIf="password.errors.required">Password Name is required</div>
+          <div *ngIf="password.errors.minlength">Password must be at least 6 characters</div>
         </div>
-        <app-multiple-checkboxes (updatedList)="selectedPreferenceList($event)" [height]="150" [masterList]="preferences" [title]="'Select Genre'"
-          [DisplayField]="'name'"></app-multiple-checkboxes>
+      </div>
+      <app-multiple-checkboxes (updatedList)="selectedPreferenceList($event)" [height]="150" [masterList]="preferences" [title]="'Select Genre'"
+        [DisplayField]="'name'"></app-multiple-checkboxes> -->
 
-        <!--form-group-->
-        <div class="form-group">
-          <button class="btn btn-primary">Register</button>
-        </div>
-        <!--form-group-->
-        <br>
-        <br>
-        <br>
-      </form>
-    </div>
+<!-- <div class="form-group">
+        <button class="btn btn-primary">Register</button>
+        <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+      </div>
+      <br>
+      <br>
+      <br>
+    </form>
   </div>
+</div>
 </body>
 
-</html>
+</html> -->
+<script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+<script src="node_modules/systemjs/dist/system.js"></script>
+<div class="row mb-4 ml-1">
+  <div class="col-sm-7">
+    <img class="img-responsive" src="assets/home.jpeg" style="width:800px;height:520px;">
+  </div>
+  <div class="col-sm-5">
+    <form class="example-form " [formGroup]="userForm" (ngSubmit)="loginSubmit()">
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Full Name" formControlName="userName" name="userName">
+        <mat-hint> eg:Harry Potter</mat-hint>
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Email" formControlName="userEmail" name="userEmail" required [pattern]="emailPattern">
+        <div *ngIf="userEmail.dirty && userEmail.errors" class="error">
+          <div *ngIf="userEmail.errors.required" class="validation_message">
+            User Email required.
+          </div>
+        </div>
+        <mat-hint>eg:abc@gmail.com</mat-hint>
+      </mat-form-field>
+
+      <mat-form-field class="password">
+        <input matInput placeholder="Password" type="password" formControlName="userPassword" name="userPassword" />
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput [matDatepicker]="picker" placeholder="DD/MM/YYYY" formControlName="userDOB" name="userDOB">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+
+
+      <button class="register" mat-raised-button style="color:green">Register</button>
+      <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+      
+    </form>
+  </div>
+</div>
