--- a/GoDeliverFrontEnd/src/app/book/book.component.html
+++ b/GoDeliverFrontEnd/src/app/book/book.component.html
@@ -60,7 +60,8 @@
               </div>
             </div>
           </div>
-        </div><!-- /.card -->
+        </div>
+        <!-- /.card -->
       </div>
     </div>
   </div>
