--- a/GoDeliverFrontEnd/src/app/cards/cards.component.html
+++ b/GoDeliverFrontEnd/src/app/cards/cards.component.html
@@ -4,9 +4,13 @@
   <mat-card-header>
     <span class="spacer"></span>
     <div *ngIf=email>
-      <mat-icon class="example-icon"><a (click)="addToWishlist(book)">favorite</a></mat-icon>
+      <mat-icon class="example-icon">
+        <a (click)="addToWishlist(book)">favorite</a>
+      </mat-icon>
     </div>
-    <mat-card-title height="10px"><h6>{{ book.title }}</h6></mat-card-title>
+    <mat-card-title height="10px">
+      <h6>{{ book.title }}</h6>
+    </mat-card-title>
     <mat-card-subtitle>{{book.genre}}</mat-card-subtitle>
     <mat-card-subtitle>Rs {{book.cost}}</mat-card-subtitle>
   </mat-card-header>
