--- a/GoDeliverFrontEnd/src/app/returnpolicy/returnpolicy.component.html
+++ b/GoDeliverFrontEnd/src/app/returnpolicy/returnpolicy.component.html
@@ -4,9 +4,14 @@
 <div class="container">
   <h2> Product Returns, Refund and Replacements</h2> Returns All products purchased on www.godeliver.in can be returned within
   7 days of the delivery date. To be eligible for a return, your item must be unused. It should be in the original packaging
-  accompanied with the receipt or proof of purchase.<br><br> Please email your request along with the order number to support@godeliver.in
-  and ship the product to: Plot No 29, Road No 76, Jubilee Hills, Hyderabad, Telangana 500033.<br><br> After receiving the
-  product our testing team will verify, approve and process the refund.<br> <br>
+  accompanied with the receipt or proof of purchase.
+  <br>
+  <br> Please email your request along with the order number to support@godeliver.in and ship the product to: Plot No 29, Road
+  No 76, Jubilee Hills, Hyderabad, Telangana 500033.
+  <br>
+  <br> After receiving the product our testing team will verify, approve and process the refund.
+  <br>
+  <br>
   <h3>Refund method</h3>
   <ul>
     <li>After receiving the product, we will inspect it and notify you. </li>
@@ -22,12 +27,14 @@
       and items that you received along with the product should be returned together.</li>
   </ul>
   <h3> Replacements</h3>
-  In case of any issue with the product: <br>
+  In case of any issue with the product:
+  <br>
   <ul>
     <li> Please reach out to us through the contact information provided on the warranty card or click here. </li>
     <li>While claiming, please share the details of the purchase order.</li>
     <li>If the product is under warranty, we will arrange for a reverse pickup from the respective address.</li>
-    <li>After receiving the product, our technical team will test the product for defects (if any) and replace the product
-      (if applicable).</li>
+    <li>After receiving the product, our technical team will test the product for defects (if any) and replace the product (if
+      applicable).
+    </li>
   </ul>
 </div>
