--- a/GoDeliverFrontEnd/src/app/login/login.component.html
+++ b/GoDeliverFrontEnd/src/app/login/login.component.html
@@ -1,44 +1,46 @@
 <!-- Login Page authentication with username and password -->
+<div class="conatiner">
 
-<body>
-  <div class="background">
-    <div class="row mb-4 ml-1">
-      <div class="col-sm-7">
-        <!-- body back-ground-->
-        <img class="img-responsive" src="assets/home.jpeg" style="width:800px;height:520px;">
-      </div>
-      <div class="col-sm-5">
-        <!--form class for username and password  using Material-->
-        <form class="example-form " [formGroup]="userForm" (ngSubmit)="loginSubmit()" style="height:70%">
-          <mat-form-field class="example-full-width">
-            <input matInput type="text" placeholder="Email" formControlName="userEmail" name="userEmail" required [pattern]="emailPattern">
-            <!--error handling for Email-->
-            <div *ngIf="userEmail.dirty && userEmail.errors" class="error">
-              <div *ngIf="userEmail.errors.required" class="validation_message">
-                User Email required.
+  <body background="assets/loginbackground.jpg">
+    <div class="background">
+      <div class="row mb-4 ml-1">
+        <div class="col-sm-7">
+          <!-- body back-ground-->
+          <img class="img-responsive" src="assets/home.jpeg" style="width:800px;height:520px;">
+        </div>
+        <div class="col-sm-5">
+          <!--form class for username and password  using Material-->
+          <form class="example-form " [formGroup]="userForm" (ngSubmit)="loginSubmit()" style="height:70%">
+            <mat-form-field class="example-full-width">
+              <input matInput type="text" placeholder="Email" formControlName="userEmail" name="userEmail" required [pattern]="emailPattern">
+              <!--error handling for Email-->
+              <div *ngIf="userEmail.dirty && userEmail.errors" class="error">
+                <div *ngIf="userEmail.errors.required" class="validation_message">
+                  User Email required.
+                </div>
               </div>
-            </div>
-            <mat-hint>eg:abc@gmail.com</mat-hint>
-          </mat-form-field>
+              <mat-hint>eg:abc@gmail.com</mat-hint>
+            </mat-form-field>
 
-          <mat-form-field class="example-full-width" style="margin-top:18px">
-            <input matInput type="password" placeholder="password" formControlName="userPassword" name="userPassword" required minlength="8">
-            <!--error handling for password-->
-            <div *ngIf="userPassword.dirty && userPassword.errors" class="error">
-              <div *ngIf="userPassword.errors.required" class="validation_message">
-                Password required.
+            <mat-form-field class="example-full-width" style="margin-top:18px">
+              <input matInput type="password" placeholder="password" formControlName="userPassword" name="userPassword" required minlength="8">
+              <!--error handling for password-->
+              <div *ngIf="userPassword.dirty && userPassword.errors" class="error">
+                <div *ngIf="userPassword.errors.required" class="validation_message">
+                  Password required.
+                </div>
               </div>
-            </div>
-          </mat-form-field>
+            </mat-form-field>
 
-          <button class="loginButton" mat-raised-button style="color:green">Login</button>
-          <div *ngIf="error" class="alert alert-danger">{{error}}</div>
-          <!-- Routing to signup page when the user clicks on the Signup button-->
-          <button class="register" [routerLink]="['/register']" mat-raised-button style="color:green">New to GoDeliver? Sign Up!
-          </button>
-        </form>
-        <!--  end of form class-->
+            <button class="loginButton" mat-raised-button style="color:green">Login</button>
+            <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+            <!-- Routing to signup page when the user clicks on the Signup button-->
+            <button class="register" [routerLink]="['/register']" mat-raised-button style="color:green">New to GoDeliver? Sign Up!
+            </button>
+          </form>
+          <!--  end of form class-->
+        </div>
       </div>
     </div>
-  </div>
-</body>
+  </body>
+</div>
