--- a/GoDeliverFrontEnd/src/app/login/login.component.html
+++ b/GoDeliverFrontEnd/src/app/login/login.component.html
@@ -32,10 +32,10 @@
               </div>
             </mat-form-field>
 
-            <button class="loginButton" mat-raised-button style="color:green">Login</button>
+            <button class="loginButton" mat-raised-button style="background-color:lightblue">Login</button>
             <div *ngIf="error" class="alert alert-danger">{{error}}</div>
             <!-- Routing to signup page when the user clicks on the Signup button-->
-            <button class="register" [routerLink]="['/register']" mat-raised-button style="color:green">New to GoDeliver? Sign Up!
+            <button class="register" [routerLink]="['/register']" mat-raised-button style="background-color:lightblue">New to GoDeliver? Sign Up!
             </button>
           </form>
           <!--  end of form class-->
