--- a/GoDeliverFrontEnd/src/app/cart/cart.component.html
+++ b/GoDeliverFrontEnd/src/app/cart/cart.component.html
@@ -1,10 +1,37 @@
 <div class="container">
-  <h2>Cart Items</h2>
-  <ul *ngFor="let item of carts" class="collection">
-    {{item.title}}
-    <img src="{{item.poster}}" height="150px" width="150px" />
-    <li>Rs {{item.cost}}
-      <li>{{item.genre}}</li>
-  </ul>
-
-</div>
+    <table class="table table-striped table-hover ">
+      <thead>
+        <tr>
+          <th>Product Name</th>
+          <th>Product Price</th>
+          <th>Product Image</th>
+        </tr>
+      </thead>
+  
+      <tbody>
+        <tr *ngFor="let item of carts; let i = index">
+          <td>
+            <h4>{{item.title}}</h4>
+          </td>
+          <td>
+            <h4>{{item.cost}}</h4>
+          </td>
+          <td><img src={{item.poster}} width="100" height="100" /></td>
+          <td><button (click)="removeProduct(product)" class="btn btn-xs btn-danger">Remove Product</button></td>
+        </tr>
+  
+        <tr class="warning">
+          <td>
+            <h4></h4>
+          </td>
+          <td>
+            <h4>Total Items: {{totalQuantity}}</h4>
+          </td>
+          <td>
+            <h4>Total: ${{totalPrice}}</h4>
+          </td>
+          <td><button (click)="checkout()" class="btn btn-md btn-success">Checkout</button></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
