changes in frontend

--- a/GoDeliverFrontEnd/src/app/footer/footer.component.html
+++ b/GoDeliverFrontEnd/src/app/footer/footer.component.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <footer class="page-footer font-small footer-dark cyan darken-5 bg-dark text-light foot">
+  <footer class="page-footer font-small footer-dark cyan darken-5 bg-dark text-light">
 
 
     <!-- Grid row-->
