--- a/GoDeliverFrontEnd/src/app/cart/cart.component.html
+++ b/GoDeliverFrontEnd/src/app/cart/cart.component.html
@@ -17,7 +17,7 @@
             <h4>{{item.cost}}</h4>
           </td>
           <td><img src={{item.poster}} width="100" height="100" /></td>
-          <td><button (click)="removeProduct(product)" class="btn btn-xs btn-danger">Remove Product</button></td>
+          <td><button (click)="deleteItem($event,item)" class="btn btn-xs btn-danger">Remove Product</button></td>
         </tr>
   
         <tr class="warning">
