--- a/GoDeliverFrontEnd/src/app/footer/footer.component.css
+++ b/GoDeliverFrontEnd/src/app/footer/footer.component.css
@@ -1,6 +1,5 @@
-.foot{ 
-    /* margin-top:20px; */
+  footer {
     position: relative;
-    bottom:0;
-    width:100%;
-}
+    bottom: 0;
+    width:100%
+  }
