--- a/GoDeliverFrontEnd/src/app/registration/registration.component.css
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.css
@@ -230,8 +230,8 @@ label {
 
 .password {
   margin-top: 20px;
-} 
-*/
+} */
+
 .example-form {
   position: relative;
   min-width: 100px;
@@ -246,4 +246,3 @@ label {
   top: 2%;
   left: 20%;
 }
-
