--- a/GoDeliverFrontEnd/src/app/login/login.component.html
+++ b/GoDeliverFrontEnd/src/app/login/login.component.html
@@ -11,32 +11,38 @@
         <div class="col-sm-5">
           <!--form class for username and password  using Material-->
           <form class="example-form " [formGroup]="userForm" (ngSubmit)="loginSubmit()" style="height:70%">
-            <mat-form-field class="example-full-width">
-              <input matInput type="text" placeholder="Email" formControlName="userEmail" name="userEmail" required [pattern]="emailPattern">
+            <!-- <mat-form-field class="">
+              <input matInput type="text" placeholder="Email" formControlName="userEmail" name="userEmail" required [pattern]="emailPattern"> -->
               <!--error handling for Email-->
-              <div *ngIf="userEmail.dirty && userEmail.errors" class="error">
+              <!-- <div *ngIf="userEmail.dirty && userEmail.errors" class="error">
                 <div *ngIf="userEmail.errors.required" class="validation_message">
                   User Email required.
                 </div>
               </div>
               <mat-hint>eg:abc@gmail.com</mat-hint>
+            </mat-form-field> -->
+            <mat-form-field>
+              <input matInput placeholder="Enter your email" [formControl]="email" required>
+              <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
             </mat-form-field>
 
             <mat-form-field class="example-full-width" style="margin-top:18px">
               <input matInput type="password" placeholder="password" formControlName="userPassword" name="userPassword" required minlength="8">
               <!--error handling for password-->
-              <div *ngIf="userPassword.dirty && userPassword.errors" class="error">
+              <!-- <div *ngIf="userPassword.dirty && userPassword.errors" class="error">
                 <div *ngIf="userPassword.errors.required" class="validation_message">
                   Password required.
                 </div>
-              </div>
+              </div> -->
+              <mat-error *ngIf="email.invalid">{{getErrorMessage2()}}</mat-error>
             </mat-form-field>
 
-            <button class="loginButton" mat-raised-button style="background-color:lightblue">Login</button>
+            <button class="loginButton" mat-raised-button style="color:white">Login</button>
+            <br><br>
             <div *ngIf="error" class="alert alert-danger">{{error}}</div>
             <!-- Routing to signup page when the user clicks on the Signup button-->
-            <button class="register" [routerLink]="['/register']" mat-raised-button style="background-color:lightblue">New to GoDeliver? Sign Up!
-            </button>
+            <a class="register" [routerLink]="['/register']"  style="color:rgb(12, 5, 5)">New to GoDeliver? Sign Up!
+            </a>
           </form>
           <!--  end of form class-->
         </div>
