--- a/GoDeliverFrontEnd/src/app/profile/profile.component.html
+++ b/GoDeliverFrontEnd/src/app/profile/profile.component.html
@@ -1,3 +1,14 @@
-<p>
-  profile works!
-</p>
+<input type="textbox" name="address" #address/>
+<button type="submit" (click)='addAddress(address.value)'>Click Me</button>
+
+
+<div *ngFor="let item of addre; let i = index">
+    <ul>
+        <li>{{item.address}}</li>
+    </ul>
+    <td><button (click)="deleteAdd($event,item)" class="btn btn-xs btn-danger">Remove Product</button></td>
+</div>
+
+<br>
+<br>
+<Br>
